Gulpfile und Package zur Compilierung von CSS (und später weiteren Dingen)

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ nbproject/project.properties
 /nbproject/private/
 nbproject/project.xml
 img/logos/Browse.plb
-
+node_modules
 .idea*
 .sass-cache*
+/package-lock.json
