--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "FAU-Einrichtungen",
   "textdomain": "fau",
-  "version": "1.11.25",
+  "version": "1.11.29",
   "keywords": [
     "WordPress",
     "Theme",
@@ -39,13 +39,16 @@
     "@babel/register": "^7.6.0",
     "autoprefixer": "^9.6.1",
     "gulp": "^4.0.2",
+    "gulp-bump": "^3.1.3",
     "gulp-clean-css": "^4.2.0",
     "gulp-if": "^3.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-wp-pot": "^2.3.5",
+    "semver": "^6.3.0",
     "yargs": "^14.0.0"
   }
 }
