--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
   "name": "FAU-Einrichtungen",
   "textdomain": "fau",
-  "version": "1.11.32",
+  "version": "1.11.33",
   "keywords": [
     "WordPress",
     "Theme",
     "FAU",
     "RRZE"
   ],
-  "author": "RRZE-Webteam <webmaster@fau.de> (https://www.rrze.fau.de)",
-  "homepage": "https://www.wordpress.rrze.fau.de",
-  "description": "WordPress Theme der Friedrich-Alexander-Universität Elangen-Nürnberg",
-  "licence": "GPL",
-  "bugs": {
-    "url": "https://github.com/RRZE-Webteam/FAU-Einrichtungen/issues"
+  "author": {
+    "name": "RRZE-Webteam <webmaster@fau.de> (https://www.rrze.fau.de)",
+    "url": "https://www.wordpress.rrze.fau.de"
   },
+  "description": "WordPress Theme der Friedrich-Alexander-Universität Elangen-Nürnberg",
+  "license": "GNU General Public License v3 or later",
+  "licenseurl": "http://www.gnu.org/licenses/gpl-3.0.html",
+  "tags": "three-columns, two-columns, one-column, right-sidebar, responsive-layout, featured-images",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RRZE-Webteam/FAU-Einrichtungen.git"
+    "url": "https://github.com/RRZE-Webteam/FAU-Einrichtungen",
+    "issues": "https://github.com/RRZE-Webteam/FAU-Einrichtungen/issues",
+    "clone": "git+https://github.com/RRZE-Webteam/FAU-Einrichtungen.git"
   },
   "browserslist": [
-    "last 3 years"
+    "last 3 years",
+    "ie 11"
   ],
   "contributors": [],
   "dependencies": {},
@@ -32,15 +36,16 @@
     "build": "gulp build",
     "pot": "gulp pot"
   },
-  "license": "GPL-3.0",
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/register": "^7.6.0",
     "autoprefixer": "^9.6.1",
+    "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-bump": "^3.1.3",
-    "gulp-clean-css": "^4.2.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-header": "^2.0.9",
     "gulp-if": "^3.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
