--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "FAU-Einrichtungen",
   "textdomain": "fau",
-  "version": "1.11.34",
+  "version": "1.11.38",
   "keywords": [
     "WordPress",
     "Theme",
@@ -12,7 +12,7 @@
     "name": "RRZE-Webteam <webmaster@fau.de> (https://www.rrze.fau.de)",
     "url": "https://www.wordpress.rrze.fau.de"
   },
-  "description": "WordPress Theme der Friedrich-Alexander-Universität Elangen-Nürnberg",
+  "description": "WordPress-Theme der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
   "license": "GNU General Public License v3 or later",
   "licenseurl": "http://www.gnu.org/licenses/gpl-3.0.html",
   "tags": "three-columns, two-columns, one-column, right-sidebar, responsive-layout, featured-images",
@@ -26,15 +26,48 @@
     "last 3 years",
     "ie 11"
   ],
+  "themeClones": {
+	"tf": {
+	    "name": "FAU-Techfak",
+	    "description": "WordPress-Theme für die Technische Fakultät der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
+	    "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-Techfak"
+	},
+	"med": {
+	     "name": "FAU-Medfak",
+	    "description": "WordPress-Theme für die Medizinische Fakultät der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
+	    "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-Medfak"
+	},
+	"nat": {
+	     "name": "FAU-Natfak",
+	    "description": "WordPress-Theme für die Naturwissenschaftliche Fakultät der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
+	    "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-Natfak"
+	},
+	"phil": {
+	     "name": "FAU-Philfak",
+	    "description": "WordPress-Theme für die Philosophische Fakultät der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
+	    "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-Philfak"
+	},
+	"rw": {
+	     "name": "FAU-RWFak",
+	    "description": "WordPress-Theme für die Rechts- und Wirtschaftswissenschaftliche Fakultät der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
+	    "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-RWFak"
+	},
+	"zuv": {
+	     "name": "FAU-Einrichtungen",
+	    "description": "WordPress-Theme für zentrale Einrichtungen der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
+	    "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-Einrichtungen"
+	}
+  },
   "contributors": [],
   "dependencies": {},
   "main": "index.php",
   "scripts": {
     "start": "gulp",
     "dev": "gulp dev",
-    "maps": "gulp devmaps",
     "build": "gulp build",
-    "pot": "gulp pot"
+    "pot": "gulp pot",
+    "maps": "gulp maps",
+    "clone": "gulp clone"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
@@ -46,7 +79,6 @@
     "gulp-bump": "^3.1.3",
     "gulp-concat": "^2.6.1",
     "gulp-header": "^2.0.9",
-    "gulp-if": "^3.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
