--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "FAU-Einrichtungen",
   "textdomain": "fau",
-  "version": "1.11.39",
+  "version": "1.11.42",
   "keywords": [
     "WordPress",
     "Theme",
@@ -27,36 +27,36 @@
     "ie 11"
   ],
   "themeClones": {
-	"tf": {
-	    "name": "FAU-Techfak",
-	    "description": "WordPress-Theme für die Technische Fakultät der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
-	    "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-Techfak"
-	},
-	"med": {
-	     "name": "FAU-Medfak",
-	    "description": "WordPress-Theme für die Medizinische Fakultät der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
-	    "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-Medfak"
-	},
-	"nat": {
-	     "name": "FAU-Natfak",
-	    "description": "WordPress-Theme für die Naturwissenschaftliche Fakultät der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
-	    "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-Natfak"
-	},
-	"phil": {
-	     "name": "FAU-Philfak",
-	    "description": "WordPress-Theme für die Philosophische Fakultät der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
-	    "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-Philfak"
-	},
-	"rw": {
-	     "name": "FAU-RWFak",
-	    "description": "WordPress-Theme für die Rechts- und Wirtschaftswissenschaftliche Fakultät der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
-	    "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-RWFak"
-	},
-	"zuv": {
-	     "name": "FAU-Einrichtungen",
-	    "description": "WordPress-Theme für zentrale Einrichtungen der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
-	    "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-Einrichtungen"
-	}
+    "tf": {
+      "name": "FAU-Techfak",
+      "description": "WordPress-Theme für die Technische Fakultät der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
+      "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-Techfak"
+    },
+    "med": {
+      "name": "FAU-Medfak",
+      "description": "WordPress-Theme für die Medizinische Fakultät der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
+      "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-Medfak"
+    },
+    "nat": {
+      "name": "FAU-Natfak",
+      "description": "WordPress-Theme für die Naturwissenschaftliche Fakultät der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
+      "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-Natfak"
+    },
+    "phil": {
+      "name": "FAU-Philfak",
+      "description": "WordPress-Theme für die Philosophische Fakultät der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
+      "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-Philfak"
+    },
+    "rw": {
+      "name": "FAU-RWFak",
+      "description": "WordPress-Theme für die Rechts- und Wirtschaftswissenschaftliche Fakultät der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
+      "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-RWFak"
+    },
+    "zuv": {
+      "name": "FAU-Einrichtungen",
+      "description": "WordPress-Theme für zentrale Einrichtungen der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)",
+      "GitHubThemeURI": "https://github.com/RRZE-Webteam/FAU-Einrichtungen"
+    }
   },
   "contributors": [],
   "dependencies": {},
@@ -66,7 +66,6 @@
     "dev": "gulp dev",
     "build": "gulp build",
     "pot": "gulp pot",
-    "maps": "gulp maps",
     "clone": "gulp clone"
   },
   "devDependencies": {
@@ -78,12 +77,13 @@
     "gulp": "^4.0.2",
     "gulp-bump": "^3.1.3",
     "gulp-concat": "^2.6.1",
+    "gulp-dart-sass": "^0.9.1",
     "gulp-header": "^2.0.9",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-touch-cmd": "0.0.1",
     "gulp-wp-pot": "^2.3.5",
     "semver": "^6.3.0",
     "yargs": "^14.0.0"
