--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "FAU-Einrichtungen",
   "textdomain": "fau",
-  "version": "1.11.45",
+  "version": "1.11.46",
   "keywords": [
     "WordPress",
     "Theme",
@@ -84,7 +84,9 @@
     "gulp-replace": "^1.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-touch-cmd": "0.0.1",
+    "gulp-w3c-css": "^2.0.0",
     "gulp-wp-pot": "^2.3.5",
+    "map-stream": "0.0.7",
     "semver": "^6.3.0",
     "yargs": "^14.0.0"
   }
