weitere posttype ad entfernt/maskiert Category anzeige im widget der posts renormalisiert

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "FAU-Einrichtungen",
   "textdomain": "fau",
-  "version": "1.11.52",
+  "version": "1.11.53-0",
   "keywords": [
     "WordPress",
     "Theme",
