--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "FAU-Einrichtungen",
   "textdomain": "fau",
-  "version": "1.12.18",
+  "version": "1.12.19",
   "keywords": [
     "WordPress",
     "Theme",
@@ -61,6 +61,7 @@
   "contributors": [],
   "dependencies": {},
   "main": "index.php",
+  "maincss": "style.css",
   "scripts": {
     "start": "gulp",
     "dev": "gulp dev",
@@ -71,9 +72,9 @@
   "jsdir": "./js/",
   "cssdir": "./css/",
   "devDependencies": {
-    "@babel/core": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/register": "^7.11.5",
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/register": "^7.12.1",
     "autoprefixer": "^9.8.6",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
@@ -84,10 +85,11 @@
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
+    "gulp-sass": "^4.1.0",
     "gulp-touch-cmd": "0.0.1",
     "gulp-uglify": "^3.0.2",
     "gulp-w3c-css": "^2.0.0",
-    "gulp-wp-pot": "^2.4.3",
+    "gulp-wp-pot": "^2.5.0",
     "map-stream": "0.0.7",
     "semver": "^6.3.0",
     "yargs": "^14.2.3"
