--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "FAU-Einrichtungen",
   "textdomain": "fau",
-  "version": "1.12.20-8",
+  "version": "1.12.21",
   "keywords": [
     "WordPress",
     "Theme",
