--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "FAU-Einrichtungen",
   "textdomain": "fau",
-  "version": "1.12.34-8",
+  "version": "1.12.34",
   "keywords": [
     "WordPress",
     "Theme",
@@ -10,7 +10,7 @@
   ],
   "compatibility": {
     "wprequires": "5.0",
-    "wptestedup": "5.6",
+    "wptestedup": "5.7",
     "phprequires": "7.3"
   },
   "author": {
