title bei social media links berücksicht, wenn dieser in den menu settings als attribut eingegeben wird

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "FAU-Einrichtungen",
   "textdomain": "fau",
-  "version": "1.12.36",
+  "version": "1.12.37-2",
   "keywords": [
     "WordPress",
     "Theme",
