--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "FAU-Einrichtungen",
   "textdomain": "fau",
-  "version": "1.13.10",
+  "version": "1.13.11-8",
   "keywords": [
     "WordPress",
     "Theme",
