--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "FAU-Einrichtungen",
   "textdomain": "fau",
-  "version": "2.0.12-1",
+  "version": "2.0.12",
   "keywords": [
     "WordPress",
     "Theme",
