--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "FAU-Einrichtungen",
     "textdomain": "fau",
-    "version": "2.0.40-1",
+    "version": "2.0.41",
     "keywords": [
         "WordPress",
         "Theme",
@@ -9,8 +9,8 @@
         "RRZE"
     ],
     "compatibility": {
-        "wprequires": "5.0",
-        "wptestedup": "5.8",
+        "wprequires": "5.8",
+        "wptestedup": "6.0",
         "phprequires": "7.4"
     },
     "author": {
