--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "FAU-Einrichtungen",
     "textdomain": "fau",
-    "version": "2.0.43",
+    "version": "2.0.44-0",
     "keywords": [
         "WordPress",
         "Theme",
