--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "FAU-Einrichtungen",
     "textdomain": "fau",
-    "version": "2.3.23-18",
+    "version": "2.3.23",
     "keywords": [
         "WordPress",
         "Theme",
@@ -9,7 +9,7 @@
         "RRZE"
     ],
     "compatibility": {
-        "wprequires": "6.0",
+        "wprequires": "6.1",
         "wptestedup": "6.2",
         "phprequires": "8.0"
     },
