--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "FAU-Einrichtungen",
     "textdomain": "fau",
-    "version": "2.3.41-16",
+    "version": "2.3.41",
     "keywords": [
         "WordPress",
         "Theme",
