social media icons nun vereinheitlicht unter nutzung der neuen sudo custom properties technik

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "FAU-Einrichtungen",
     "textdomain": "fau",
-    "version": "2.3.47-25",
+    "version": "2.3.47",
     "keywords": [
         "WordPress",
         "Theme",
