#1252 add padding on header when admin bar is shown

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "FAU-Einrichtungen",
     "textdomain": "fau",
-    "version": "2.3.47",
+    "version": "2.3.48-17",
     "keywords": [
         "WordPress",
         "Theme",
