--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "type": "module",
     "name": "FAU-Einrichtungen",
     "textdomain": "fau",
-    "version": "2.6.33",
+    "version": "2.6.34-0",
     "keywords": [
         "WordPress",
         "Theme",
